--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,32 +1,40 @@
 @font-face {
     font-family: 'Open Sans';
-    src: url(fonts/OpenSans-Regular-webfont.eot?);
-    src: url(fonts/OpenSans-Regular-webfont.eot?) format('embedded-opentype'),
-         url(fonts/OpenSans-Regular-webfont.woff?) format('woff'),
-         url(fonts/OpenSans-Regular-webfont.ttf?) format('truetype'),
-         url(fonts/OpenSans-Regular-webfont.svg#OpenSansRegular?) format('svg');
+    src: url(fonts/OpenSans/OpenSans-Regular-webfont.eot?);
+    src: url(fonts/OpenSans/OpenSans-Regular-webfont.eot?) format('embedded-opentype'),
+         url(fonts/OpenSans/OpenSans-Regular-webfont.woff?) format('woff'),
+         url(fonts/OpenSans/OpenSans-Regular-webfont.ttf?) format('truetype'),
+         url(fonts/OpenSans/OpenSans-Regular-webfont.svg#OpenSansRegular?) format('svg');
     font-weight: normal;
     font-style: normal
 }
-
 @font-face {
-    font-family: 'Open Sans Semibold';
-    src: url(fonts/OpenSans-Semibold-webfont.eot?);
-    src: url(fonts/OpenSans-Semibold-webfont.eot?) format('embedded-opentype'),
-         url(fonts/OpenSans-Semibold-webfont.woff?) format('woff'),
-         url(fonts/OpenSans-Semibold-webfont.ttf?) format('truetype'),
-         url(fonts/OpenSans-Semibold-webfont.svg#OpenSansSemibold?) format('svg');
-    font-weight: bold;
+    font-family: 'Open Sans Bold';
+    src: url(fonts/OpenSans/OpenSans-Bold-webfont.eot?);
+    src: url(fonts/OpenSans/OpenSans-Bold-webfont.eot?) format('embedded-opentype'),
+    url(fonts/OpenSans/OpenSans-Bold-webfont.woff?) format('woff'),
+    url(fonts/OpenSans/OpenSans-Bold-webfont.ttf?) format('truetype'),
+    url(fonts/OpenSans/OpenSans-Bold-webfont.svg#OpenSansBold?) format('svg');
+    font-weight: normal;
     font-style: normal
 }
-
+@font-face {
+    font-family: 'Open Sans Semibold';
+    src: url(fonts/OpenSans/OpenSans-Semibold-webfont.eot?);
+    src: url(fonts/OpenSans/OpenSans-Semibold-webfont.eot?) format('embedded-opentype'),
+         url(fonts/OpenSans/OpenSans-Semibold-webfont.woff?) format('woff'),
+         url(fonts/OpenSans/OpenSans-Semibold-webfont.ttf?) format('truetype'),
+         url(fonts/OpenSans/OpenSans-Semibold-webfont.svg#OpenSansSemibold?) format('svg');
+    font-weight: normal;
+    font-style: normal
+}
 @font-face {
     font-family: 'Open Sans Light';
-    src: url(fonts/OpenSans-Light-webfont.eot?);
-    src: url(fonts/OpenSans-Light-webfont.eot?) format('embedded-opentype'),
-         url(fonts/OpenSans-Light-webfont.woff?) format('woff'),
-         url(fonts/OpenSans-Light-webfont.ttf?) format('truetype'),
-         url(fonts/OpenSans-Light-webfont.svg#OpenSansLight?) format('svg');
+    src: url(fonts/OpenSans/OpenSans-Light-webfont.eot?);
+    src: url(fonts/OpenSans/OpenSans-Light-webfont.eot?) format('embedded-opentype'),
+         url(fonts/OpenSans/OpenSans-Light-webfont.woff?) format('woff'),
+         url(fonts/OpenSans/OpenSans-Light-webfont.ttf?) format('truetype'),
+         url(fonts/OpenSans/OpenSans-Light-webfont.svg#OpenSansLight?) format('svg');
     font-weight: normal;
     font-style: normal
 }
